Addind new UI for controlling pen size,. This feels awesome!

--- a/config/theme.css
+++ b/config/theme.css
@@ -60,7 +60,7 @@
   // Animation
   // ================================================================== */
   --theme--animation-timing: 360ms;
-
+  --theme--animation-ease: ease-in-out;
 
   /* ==================================================================
   // Page
