--- a/config/theme.css
+++ b/config/theme.css
@@ -23,14 +23,14 @@
   // ================================================================== */
   --theme--font--root--family: 'Maax', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --theme--font--heading--family: var(--theme--font--root--family);
-  --theme--font--root--size: 20px;
+  --theme--font--root--size: 30px;
   --theme--font--root--weight: 400;
   --theme--font--root--line-height: 1.5;
   --theme--font--size-xxl: 5rem;
-  --theme--font--size-xl: 3rem;
-  --theme--font--size-l: 2.5rem;
-  --theme--font--size-m: 1.75rem;
-  --theme--font--size: 1.25rem;
+  --theme--font--size-xl: 4rem;
+  --theme--font--size-l: 3rem;
+  --theme--font--size-m: 2rem;
+  --theme--font--size: 1.5rem;
 
 
   /* ==================================================================
@@ -132,13 +132,13 @@
   --callout--cta--padding: var(--theme--unit--small);
   --callout--cta--radius: var(--theme--radius);
 
-  --callout--left--background: var(--theme--color--white);
-  --callout--left--color: var(--theme--color--black);
+  --callout--left--background: var(--theme--color--secondary);
+  --callout--left--color: var(--theme--color--white);
 
   --callout--right--background: var(--theme--color--quaternary);
-  --callout--right--color: var(--theme--color--black);
+  --callout--right--color: var(--theme--color--white);
 
-  --callout--center--background: var(--theme--color--primary);
+  --callout--center--background: none;
   --callout--center--color: var(--theme--color--white);
 
   --callout--big-numbers--background: var(--theme--color--white);
