--- a/src/components/Easel/styles.module.scss
+++ b/src/components/Easel/styles.module.scss
@@ -112,24 +112,21 @@
   z-index: 2;
 }
 
+.WorkspaceClearButton,
 .WorkspaceShuffleButton {
   position: absolute;
   top: 25px;
-  left: calc(100% - 60px);
-  width: 60px;
-  height: 60px;
-  @include button-hover;
-  z-index: 2;
-}
-
-.WorkspaceClearButton {
-  position: absolute;
-  top: -10px;
-  left: calc(100% - 120px);
   width: 50px;
   height: 50px;
   @include button-hover;
   z-index: 2;
+}
+.WorkspaceShuffleButton {
+  left: calc(100% - 60px);
+}
+
+.WorkspaceClearButton {
+  right: calc(100% - 60px);
 }
 
 /**
