--- a/src/components/Easel/styles.module.scss
+++ b/src/components/Easel/styles.module.scss
@@ -7,6 +7,10 @@
   margin: auto;
   border-radius: 50%;
   border: 20px solid white;
+  @media ($mq-mobile) {
+    width: 350px;
+    height: 350px;
+  }
 }
 
 @mixin workspace-layer {
