New: Track & Redirect component to use when sending visitors back to the home page from third party e.g. after a Typeform submission
Bugfix: Top align badgelist

--- a/src/components/BadgeList/styles.module.scss
+++ b/src/components/BadgeList/styles.module.scss
@@ -6,7 +6,7 @@
 
   .Badge {
     padding: var(--theme--unit--base);
-    margin: auto;
+    margin: 0 auto;
     width: 20rem;
     &::before {
       display: none;
