--- a/src/common/styles/mixins/_block.mixin.scss
+++ b/src/common/styles/mixins/_block.mixin.scss
@@ -54,6 +54,11 @@
       &:nth-child(even) {
         padding-left: var(--block--padding);
       }
+      // Only Child No Padding
+      &:first-child:last-child {
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
     @media ($mq-mobile) {
       padding: var(--block--padding--mobile);
