Update Easel to match latest design

--- a/config/styles.css
+++ b/config/styles.css
@@ -37,4 +37,10 @@ body {
 
 #Footer .logo {
   filter: invert();
+  margin: auto;
+  padding: 0;
+}
+
+#Footer .footer--content {
+  display: none;
 }
