--- a/src/components/Easel/styles.module.scss
+++ b/src/components/Easel/styles.module.scss
@@ -157,11 +157,11 @@
 .Video {
   position: absolute;
   display: block;
-  top: 0;
-  left: 0;
+  top: -20px;
+  left: -20px;
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: calc(40px + 100%);
+  height: calc(40px + 100%);
   border-radius: inherit;
   &::-webkit-media-controls-play-button {
     display: none !important;
