Adjust layout for mobile, update logo to read The Easel

--- a/config/styles.css
+++ b/config/styles.css
@@ -3,16 +3,18 @@
 // ================================================================== */
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
+  position: relative;
+  flex-direction: column;
+  margin-top: var(--theme--unit--small);
 }
 
 .header .header--h1 {
   margin: auto;
   text-align: center;
+}
+
+.header p {
+  margin: var(--theme--unit--small) 0 0;
 }
 
 body {
